--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.1.2",
     "@vitejs/plugin-vue": "^5.0.4",
     "vite": "^5.2.8"
   }
